--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ section {
 }
 
 #programme ul li {
-    background-color: #e9f5e9;
+    background-color: #EAF8FD;
     padding: 1em;
     margin: 0.5em 0;
     border-left: 5px solid #007CBD;
