--- a/style/main.css
+++ b/style/main.css
@@ -32,16 +32,16 @@ footer {
     text-align: left;
 }
 
-.card-container h2, .card h2{
+.card h2{
     color: #007CBD;
     margin-bottom: 0.5em;
     font-size: 1.8rem;
 }
 
 .card {
-    background: linear-gradient(135deg, #ffffff 0%, #f4f4f9 100%);
-    max-width: 900px;
-    margin: 2em auto;
+    max-width: 900px; /* Largeur maximale */
+    width: calc(100% - 2em); /* Largeur dynamique pour laisser un espace latéral */
+    margin: 2em auto; /* Centre la carte */
     padding: 2em;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
@@ -49,7 +49,9 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: left;
+    background: linear-gradient(135deg, #ffffff 0%, #f4f4f9 100%);
 }
+
 
 .card p {
     font-size: 1.1rem;
@@ -93,6 +95,7 @@ ul li {
 /* Grille de navigation */
 #navigation ul {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     list-style: none;
     margin-top : -30px;
